--- a/js/packages/web/package.json
+++ b/js/packages/web/package.json
@@ -28,6 +28,7 @@
     "event-emitter": "^0.3.5",
     "eventemitter3": "^4.0.7",
     "isomorphic-unfetch": "^3.1.0",
+    "jazzicon": "^1.5.0",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "lodash": "^4.17.20",
