--- a/js/package.json
+++ b/js/package.json
@@ -55,6 +55,7 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "@metaplex/arweave-cost": "^1.0.4",
     "@prismicio/react": "^2.2.0",
     "cross-env": "^7.0.3",
