how it work popup in menu done

--- a/js/packages/web/package.json
+++ b/js/packages/web/package.json
@@ -10,6 +10,7 @@
     "@metaplex-foundation/mpl-token-metadata": "1.1.0",
     "@metaplex/arweave-cost": "^1.0.4",
     "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.3",
     "@oyster/common": "0.0.2",
     "@project-serum/serum": "^0.13.52",
     "@solana/spl-name-service": "0.1.3",
